--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>JSテスト</title>
-  <link rel="stylesheet" href="/css/styles.css">
-  <script type="text/javascript" src="/js/main.js"></script>
+  <link rel="stylesheet" href="./css/styles.css">
+  <script type="text/javascript" src="./js/main.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
