--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <div class="main">
     <div class="container">
       <div class="contents">
-         <a href="./works/tools/tweetSearch.js">ツイートサーチ</a><br>
-         <input type='button' value='ツイートサーチ呼び出し' onclick="hogemoge('https://soreso.github.io/works/tools/tweetSearch.js')"><br>
-         <!-- <input type='button' value='ツイートサーチ呼び出し' onclick="hogemoge('https://127.0.0.1:8080/works/tools/tweetSearch.js')"> -->
+         <a href="./works/tweetSearch.js">ツイートサーチ</a><br>
+         <input type='button' value='ツイートサーチ呼び出し' onclick="hogemoge('https://soreso.github.io/tools/works/tweetSearch.js')"><br>
+         <!-- <input type='button' value='ツイートサーチ呼び出し' onclick="hogemoge('https://127.0.0.1:8080/works/tweetSearch.js')"> -->
          <input type="button" value='アラート呼び出し' onclick="alertTest('hoge?')">
       </div>
       <div class="contents" style="background: #ddd; border-radius:10px; margin: 10px 20px;">
